--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,22 @@
 spring.application.name=Picpay
+# Configuração do banco de dados H2
+spring.datasource.url=jdbc:h2:mem:picpay-db
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+
+# Dialeto do Hibernate para H2
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+# Mostrar comandos SQL no console
+spring.jpa.show-sql=true
+
+# Atualizar o schema automaticamente (pode ser: none, update, create, create-drop)
+spring.jpa.hibernate.ddl-auto=update
+
+# Habilitar console web do H2
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+
+# Definir o nome do schema padrão (opcional)
+spring.datasource.hikari.schema=PUBLIC
